k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: factory
  labels:
    kubernetes.io/metadata.name: factory
